--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Platypi:wght@400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   :root {
+    --font-sans: 'Platypi', 'sans-serif';
     --background: 0 0% 100%;
     --foreground: 224 71.4% 4.1%;
     --card: 0 0% 100%;
@@ -52,13 +55,10 @@
     @apply border-border;
   }
 
-
   body {
     @apply bg-background text-foreground;
 
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-      'Open Sans', 'Helvetica Neue', sans-serif;
   }
 }
